<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="Search" />

    <item
        android:id="@+id/navigation_add_announcement"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/add_announcement" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_my_auctions"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_awards"
        android:icon="@drawable/ic_awards"
        android:title="Awards" />

</menu>