<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ecoswap.ui.home.HomeFragment"
        android:label="Hottest 🔥"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_add_announcement"
            app:destination="@id/navigation_add_announcement"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.ecoswap.ui.search.SearchFragment"
        android:label="Search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.ecoswap.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_navigation_dashboard_to_editDealFragment"
            app:destination="@id/editDealFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.ecoswap.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.ecoswap.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.ecoswap.ui.favorites.FavoritesFragment"
        android:label="Favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_awards"
        android:name="com.example.ecoswap.ui.awards.AwardsFragment"
        android:label="Awards"
        tools:layout="@layout/fragment_awards" />

    <fragment
        android:id="@+id/navigation_add_announcement"
        android:name="com.example.ecoswap.ui.AddAnnouncementFragment"
        android:label="Add Announcement"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/add_announcement"
        tools:layout="@layout/dialog_add_announcement" />

    <fragment
        android:id="@+id/editDealFragment"
        android:name="com.example.ecoswap.ui.edit.EditDealFragment"
        android:label="Edytuj ogłoszenie"
        tools:layout="@layout/fragment_edit_deal">
        <argument
            android:name="deal"
            app:argType="com.example.ecoswap.ui.dto.Deal"
            app:nullable="false" />
    </fragment>

</navigation>